--- a/style.css
+++ b/style.css
@@ -1,7 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:wght@400;500&display=swap');
-nav {
-    margin: auto;
-  
-    font-family: 'Playfair Display', serif;
- }
- 
+
+
+
+
+
+@media screen and (max-width: 350px) {
+
+    main {
+        width: 100%;
+
+    }
+
+    h5 {
+        font-size: 20px;
+    }
+}
